<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/searchLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16sp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="5"
                    android:textSize="24sp"
                    android:textColor="@color/dark_orange"
                    android:fontFamily="@font/font_super"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:text="@string/app_name"/>

                <ImageView
                    android:id="@+id/imgTable"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/baseline_table_bar_24"/>

                <ImageView
                    android:id="@+id/imgCart"
                    android:layout_width="0dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:src="@drawable/cart"/>

                <ImageView
                    android:id="@+id/imgGift"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:src="@drawable/gift"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp">

                <TextView
                    android:id="@+id/txtPop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/popular"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/light_black"
                    android:textSize="18sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/txt_popular_see_all"
                    android:layout_width="70dp"
                    android:layout_height="22dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/imgpop"
                    android:layout_marginEnd="6dp"
                    android:gravity="end"
                    android:text="@string/see_all"
                    android:visibility="gone"
                    android:textColor="@color/light_black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imgpop"
                    android:visibility="gone"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_forward"
                    android:contentDescription="@null" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/txtPop" />

            <TextView
                android:id="@+id/txtShortcuts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/shortcuts"
                android:textColor="@color/light_black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerPopular" />

            <LinearLayout
                android:id="@+id/layoutTypes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintTop_toBottomOf="@id/txtShortcuts">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardDrinks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/drinks"
                            android:contentDescription="@null" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_marginBottom="8dp"
                            android:text="@string/drink"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPizza"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/pizza"
                            android:contentDescription="@null" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_marginBottom="8dp"
                            android:text="@string/pizza"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardBurger"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/burger"
                            android:contentDescription="@null" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:layout_marginBottom="8dp"
                            android:text="@string/burger"/>

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTallrken"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:src="@drawable/tallerken"
                            android:contentDescription="@null" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_marginBottom="8dp"
                            android:text="@string/tallerken"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ImageView
                android:id="@+id/rewardBanner"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:layout_marginTop="24dp"
                android:src="@drawable/reward"
                android:contentDescription="@null" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/txtBreakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/dessert"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/light_black"
                    android:textSize="18sp"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/txtDessertSeeAll"
                    android:layout_width="70dp"
                    android:layout_height="22dp"
                    android:layout_toStartOf="@id/img"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:layout_marginEnd="6dp"
                    android:text="@string/see_all"
                    android:textColor="@color/light_black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/img"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_arrow_forward"
                    android:contentDescription="@null" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDessert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/layoutTypes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>